<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainButtons"
    android:background="#f0f2f0">

    <include
        android:id="@+id/homeToolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_below="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingStart="100dp"
        android:paddingEnd="100dp">
        <ImageButton
            android:id="@+id/btnInventory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/solid_border_white_back"
            android:src="@drawable/inventory"
            android:adjustViewBounds="true"
            android:layout_marginEnd="10dp"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/str_inventory" />

        <LinearLayout
            android:id="@+id/inventoryOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:visibility="gone"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnSetInventory"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/solid_border_white_back"
                android:src="@drawable/set_inventory"
                android:adjustViewBounds="true"
                android:padding="40dp"
                android:scaleType="fitCenter"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/str_set_inventory" />
            <ImageButton
                android:id="@+id/btnCheckInventory"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/solid_border_white_back"
                android:src="@drawable/check_inventory"
                android:adjustViewBounds="true"
                android:padding="40dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/str_check_inventory" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnOrders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/solid_border_white_back"
            android:src="@drawable/orders"
            android:adjustViewBounds="true"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/str_orders" />

        <LinearLayout
            android:id="@+id/orderOptions"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btnNewOrder"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/solid_border_white_back"
                android:src="@drawable/create_order"
                android:adjustViewBounds="true"
                android:padding="40dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/str_create_order" />
            <ImageButton
                android:id="@+id/btnOrderHistory"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@drawable/solid_border_white_back"
                android:src="@drawable/order_history"
                android:adjustViewBounds="true"
                android:layout_marginTop="10dp"
                android:padding="40dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/str_track_order" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>