<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="@drawable/ic_window_dim"
    android:id="@+id/frame_layout_main">
<!--    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f2f0">

        <include
            android:id="@+id/homeToolbar"
            layout="@layout/custom_toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/homeToolbar"
                android:layout_margin="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/row1Buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnInventory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/inventory"
                        android:adjustViewBounds="true"
                        android:padding="50dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/str_inventory" />
                    <ImageButton
                        android:id="@+id/btnOrders"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/orders"
                        android:adjustViewBounds="true"
                        android:padding="50dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/str_orders" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnUsage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/usage_analytics"
                        android:adjustViewBounds="true"
                        android:padding="50dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/str_analysis" />
                    <ImageButton
                        android:id="@+id/btnProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/profile"
                        android:adjustViewBounds="true"
                        android:padding="50dp"
                        android:layout_margin="5dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/str_profile" />
                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
</FrameLayout>