<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/profileToolbar"
        layout="@layout/custom_toolbar"/>

    <TextView
        android:id="@+id/tvUserFirstLast"
        android:layout_below="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        style="@style/activityHeader"/>

    <LinearLayout
        android:id="@+id/userIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tvUserFirstLast"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="User ID"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/tvUserID"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/storeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/userIDLayout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Store Number"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/tvUserStore"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
    </LinearLayout>

    <View
        android:id="@+id/dividerProfile"
        android:layout_below="@id/storeLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#000000"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/tvChangePassword"
        android:text="@string/str_password"
        android:layout_below="@+id/dividerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tvChangePasswordLink"
        android:text="@string/str_change_password"
        android:layout_below="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:clickable="true"
        android:textColor="@color/colorTeal"
        android:focusable="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutChangePassword"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/tvChangePasswordLink"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_old_password"
                android:layout_marginStart="20dp"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/txtOldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPassword"
                android:background="@drawable/solid_border_transparent"
                android:textSize="25sp"
                android:layout_marginEnd="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_new_password"
                android:layout_marginStart="20dp"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/txtNewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/solid_border_transparent"
                android:textSize="25sp"
                android:inputType="textPassword"
                android:layout_marginEnd="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_confirm_password"
                android:layout_marginStart="20dp"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/txtConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/solid_border_transparent"
                android:textSize="25sp"
                android:inputType="textPassword"
                android:layout_marginEnd="50dp"/>
        </LinearLayout>

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:textSize="25sp"
                android:background="@drawable/solid_border_button"
                android:text="@string/str_change_password"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>